--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="info" id="pokemonInfo">
             <img id="pokemonImg" src="" alt=""/>
             <h2 id="pokemonName"></h2>
-            <p id="pokemonType"></p>
-            <p id="pokemonAbility"></p>
+            <p id="pokemonTypes"></p>
+            <p id="pokemonAbilities"></p>
             <p id="pokemonStats"></p>
         </div>  
     </div>
