separate js files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="scripts/script.mjs"></script>
+    <script defer type="module" src="scripts/main.mjs"></script>
     <link rel="stylesheet" href="styles/style.css">
     <title>Pokemon Info Viewer</title>
 </head>
