added fetching pokemon sprites based on randomId

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="fetchPokemon">Fetch Pokemon</button>
         
         <div class="info" id="pokemonInfo">
-            <img id="pokemonImg" src="" alt=""/>
+            <img id="pokemonSprite" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/poke-ball.png" alt="Pokemon Sprite"/>
             <h2 id="pokemonName"></h2>
             <p id="pokemonTypes"></p>
             <p id="pokemonAbilities"></p>
