Added pokemon sound effects

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
             <p id="pokemonStats"></p>
         </div>  
     </div>
+
+    <audio id="pokemonCry" controls preload="auto"></audio>
 </body>
 </html>
